# barry

./: Cargo.toml
src/: main.rs  utils.rs
src/apps/: app_search.rs  bar.rs  mod.rs
src/components/: current_track.rs  date_time.rs  metric.rs  mod.rs  volume.rs  workspace.rs
src/data/: mod.rs  track.rs  workspace.rs
src/mpris/: mod.rs
src/styling/: border.rs  font.rs  mod.rs  style.rs  stylesheet.rs  thickness.rs
src/widgets/: circular_progress.rs  mod.rs
